# digestive-functors-aeson

./: .gitignore  Changelog.md  README.md  changelog.md  default.nix  digestive-functors-aeson.cabal  shell.nix
src/Text/Digestive/: Aeson.hs
test/: Tests.hs
