name: digestive-functors-aeson
category: Web, JSON
version: 1.0.2
license: GPL-3
license-file: LICENSE
author: Oliver Charles
maintainer: Oliver Charles <ollie@ocharles.org.uk>
build-type: Simple
cabal-version: >=1.8
homepage: http://github.com/ocharles/digestive-functors-aeson
bug-reports: http://github.com/ocharles/digestive-functors-aeson/issues
copyright: Copyright (C) 2012 Oliver Charles
synopsis: Run digestive-functors forms against JSON
description:
  This package allows you to run a form created by digestive functors against a
  JSON document that has been parsed by Aeson.
  .
  For changes, please see http://github.com/ocharles/changelog.md

source-repository head
  type: git
  location: git://github.com/ocharles/digestive-functors-aeson.git
  tag: v1.0.0

library
  exposed-modules:
    Text.Digestive.Aeson
  build-depends:
    aeson >= 0.6,
    aeson-lens >= 0.4.1.0,
    base >= 4.5 && < 4.7,
    digestive-functors >= 0.5 && < 0.6,
    lens >= 3.0,
    safe >= 0.3.3,
    text >= 0.11
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Tests.hs
  build-depends:
    aeson,
    base >= 4.5 && < 4.7,
    digestive-functors >= 0.5,
    digestive-functors-aeson ==1.0.2,
    HUnit >= 1.2,
    mtl,
    test-framework >= 0.6,
    test-framework-hunit,
    text >= 0.11
