name: digestive-functors-aeson
category: Web, JSON
version: 1.1.25
license: GPL-3
license-file: LICENSE
author: Oliver Charles
maintainer: Oliver Charles <ollie@ocharles.org.uk>
build-type: Simple
cabal-version: >=1.8
homepage: http://github.com/ocharles/digestive-functors-aeson
bug-reports: http://github.com/ocharles/digestive-functors-aeson/issues
copyright: Copyright (C) 2012 Oliver Charles
synopsis: Run digestive-functors forms against JSON
description:
  This package allows you to run a form created by digestive functors against a
  JSON document that has been parsed by Aeson.
  .
  For changes, please see http://github.com/ocharles/changelog.md
extra-source-files: Changelog.md

source-repository head
  type: git
  location: git://github.com/ocharles/digestive-functors-aeson.git
  tag: v1.1.13

library
  exposed-modules:
    Text.Digestive.Aeson
  build-depends:
    aeson >= 0.7 && < 1.5,
    base >= 4.5 && < 5,
    containers >= 0.5,
    digestive-functors >= 0.7 && < 0.9,
    lens >= 4.4 && < 4.18,
    lens-aeson >= 1 && < 1.1,
    safe >= 0.3.3,
    text >= 0.11,
    vector >= 0.10
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Tests.hs
  build-depends:
    digestive-functors-aeson,

    aeson,
    base >= 4.5 && < 5,
    bytestring >= 0.9,
    digestive-functors >= 0.6,
    HUnit >= 1.2,
    mtl,
    scientific >= 0.2.0.1,
    tasty >= 0.1,
    tasty-hunit >= 0.1,
    text >= 0.11
